[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/Transition.gd" type="Script" id=1]
[ext_resource path="res://src/TransitionPattern.tscn" type="PackedScene" id=2]

[node name="Transition" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_top = 44.0
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Column" parent="HBoxContainer" instance=ExtResource( 2 )]
margin_right = 88.0
margin_bottom = 206.0

[node name="Column2" parent="HBoxContainer" instance=ExtResource( 2 )]
margin_left = 92.0
margin_right = 180.0
margin_bottom = 206.0

[node name="Column3" parent="HBoxContainer" instance=ExtResource( 2 )]
margin_left = 184.0
margin_right = 272.0
margin_bottom = 206.0

[node name="Column4" parent="HBoxContainer" instance=ExtResource( 2 )]
margin_left = 276.0
margin_right = 364.0
margin_bottom = 206.0

[node name="Column5" parent="HBoxContainer" instance=ExtResource( 2 )]
margin_left = 368.0
margin_right = 456.0
margin_bottom = 206.0

[node name="Column6" parent="HBoxContainer" instance=ExtResource( 2 )]
margin_left = 460.0
margin_right = 548.0
margin_bottom = 206.0
